--- a/assets/css/transitions.css
+++ b/assets/css/transitions.css
@@ -8,3 +8,9 @@
     opacity: 0;
     transform: scale(.98);
 }
+
+.mobile-menu-enter,
+.mobile-menu-leave-to {
+    opacity: 0;
+    transform: scale(1.05);
+}
