--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -14,7 +14,7 @@
 }
 
 .block-spacer {
-    @apply mb-24 md:mb-36 lg:mb-48;
+    @apply mb-36 md:mb-48 lg:mb-72;
 }
 
 @layer base {
@@ -35,7 +35,7 @@
     }
 
     blockquote {
-        @apply rounded my-4 md:my-8 lg:my-16 border-l-4 border-primary-400 pl-8 p-8 bg-gradient-to-tr from-gray-900 to-gray-800;
+        @apply rounded my-4 md:my-8 lg:my-16 border-l-4 border-gray-400 pl-8 p-8 bg-gradient-to-tr from-gray-900 to-gray-800;
     }
 
     blockquote p {
